--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 .anatomiaimg{
+    position: absolute;
     width: 325px!important;
     height: 100!important;
     left: 100;
 }
-#anatomia9{
-    width: 325!important;
-    height: 10!important;
-}
+
 
 
